tautulli/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  managedFields:
  name: tautulli
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tautulli
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        - name: TZ
          value: America/Detroit
        image: linuxserver/tautulli
        imagePullPolicy: Always
        name: tautulli
        ports:
        - containerPort: 8181
          name: web
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - mountPath: /config
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: tatulli-data
