tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"tautulli","kubernetes.io/name":"tautulli"},"name":"tautulli","namespace":"default"},"spec":{"ports":[{"name":"web","port":8181,"targetPort":8181}],"selector":{"app":"tautulli"},"type":"ClusterIP"}}
  creationTimestamp: "2020-08-12T18:44:01Z"
  labels:
    app: tautulli
    kubernetes.io/name: tautulli
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:app: {}
          f:kubernetes.io/name: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":8181,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl
    operation: Update
    time: "2020-08-12T18:44:01Z"
  name: tautulli
  namespace: default
  resourceVersion: "10772"
  selfLink: /api/v1/namespaces/default/services/tautulli
  uid: b7ad398a-2e47-474b-8b29-c012892d3392
spec:
  clusterIP: 10.99.209.108
  ports:
  - name: web
    port: 8181
    protocol: TCP
    targetPort: 8181
  selector:
    app: tautulli
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
