tautulli/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`tautulli.cloud.martinojones.com`)
    middlewares:
    - name: redirecthttps
    services:
    - name: tautulli
      port: 8181
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  generation: 1
  name: tautullisecure
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`tautulli.cloud.martinojones.com`)
    services:
    - name: tautulli
      port: 8181
  tls:
    certResolver: default
